Fixed issues for W01 Project - Home Page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <img src="images/home.svg" alt="Home Icon" width="640" height="640">
         <span>Matt Handy's Web Frontend Development I Homepage</span>
-        <button id="ham-btn" class="hamburger"></button>
+        <button id="ham-btn" class="hamburger" aria-label="Menu"></button>
         <nav id="nav">
             <a href="index.html">Home</a>
             <a href="#">Chamber Project</a>
@@ -57,14 +57,14 @@
     </main>
     <footer>
         <nav>
-            <a href="https://github.com/mhandy-pathway/wdd231" alt="GitHub Repository" target="_blank"><img
-                    src="images/github.svg"></a>
-            <a href="https://www.linkedin.com/in/handymatt/" alt="LinkedIn Profile" target="_blank"><img
-                    src="images/linkedin.svg"></a>
-            <a href="https://www.facebook.com/matt.handy.90" alt="Facebook Profile" target="_blank"><img
-                    src="images/facebook.svg"></a>
-            <a href="https://api.whatsapp.com/send?phone=595982259998" alt="WhatsApp Number" target="_blank"><img
-                    src="images/whatsapp.svg"></a>
+            <a href="https://github.com/mhandy-pathway/wdd231" target="_blank"><img src="images/github.svg"
+                    alt="GitHub Repository"></a>
+            <a href="https://www.linkedin.com/in/handymatt/" target="_blank"><img src="images/linkedin.svg"
+                    alt="LinkedIn Profile"></a>
+            <a href="https://www.facebook.com/matt.handy.90" target="_blank"><img src="images/facebook.svg"
+                    alt="Facebook Profile"></a>
+            <a href="https://api.whatsapp.com/send?phone=595982259998" target="_blank"><img src="images/whatsapp.svg"
+                    alt="WhatsApp Number"></a>
         </nav>
         <p><span id="currentyear"></span> | Matt Handy | Villa Elisa, Paraguay</p>
         <p><span id="lastModified"></span></p>
