--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>WDD231 - Matt Handy's Web Frontend Development I Homepage</title>
     <meta name="description" content="WDD231 - Matt Handy's Web Frontend Development I Homepage">
     <meta name="author" content="Matt Handy">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
