--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <span>Matt Handy's Web Frontend Development I Homepage</span>
         <button id="ham-btn" class="hamburger" aria-label="Menu"></button>
         <nav id="nav">
-            <a href="index.html">Home</a>
+            <a href="index.html" class="current">Home</a>
             <a href="#">Chamber Project</a>
             <a href="#">Final Project</a>
         </nav>
