--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>WDD231 - Matt Handy's Web Frontend Development I Homepage</title>
     <meta name="description" content="WDD231 - Matt Handy's Web Frontend Development I Homepage">
     <meta name="author" content="Matt Handy">
+    <meta name="og:title" content="WDD231 - Matt Handy's Web Frontend Development I Homepage">
+    <meta name="og:description" content="WDD231 - Matt Handy's Web Frontend Development I Homepage">
+    <meta name="og:image" content="https://mhandy-pathway.github.io/wdd231/images/mattandalice.webp">
+    <meta name="og:url" content="https://mhandy-pathway.github.io/wdd231">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
