Updates to W02 Assignment - Directory Page

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -11,6 +11,7 @@
     <meta name="og:description" content="A Directory of Local Businesses from the Villa Elisa Chamber of Commerce">
     <meta name="og:image" content="">
     <meta name="og:url" content="">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
@@ -21,7 +22,7 @@
 
 <body>
     <header>
-        <img src="../images/home.svg" alt="Home Icon" width="640" height="640">
+        <img src="images/estrella.webp" alt="Paraguay Star" width="50" height="50">
         <span>Villa Elisa Chamber of Commerce</span>
         <button id="ham-btn" class="hamburger" aria-label="Menu"></button>
         <nav id="nav">
@@ -33,10 +34,10 @@
     </header>
     <main>
         <h1>Business Directory</h1>
-        <nav class="directory">
+        <div class="directory-btns">
             <img src="images/grid.svg" id="gridButton" alt="View Members in Grid">
             <img src="images/list.svg" id="listButton" alt="View Members in List">
-        </nav>
+        </div>
         <div id="directory">
 
         </div>
@@ -51,11 +52,11 @@
         <div>
             <nav>
                 <a href="https://github.com/mhandy-pathway/wdd231" target="_blank"><img src="images/github.svg"
-                        alt="GitHub Repository"></a>
+                        alt="GitHub Repository" width="44" height="44"></a>
                 <a href="https://www.linkedin.com/in/handymatt/" target="_blank"><img src="images/linkedin.svg"
-                        alt="LinkedIn Profile"></a>
+                        alt="LinkedIn Profile" width="44" height="44"></a>
                 <a href="https://www.facebook.com/matt.handy.90" target="_blank"><img src="images/facebook.svg"
-                        alt="Facebook Profile"></a>
+                        alt="Facebook Profile" width="44" height="44"></a>
                 <a href="https://api.whatsapp.com/send?phone=595982259998" target="_blank"><img
                         src="images/whatsapp.svg" alt="WhatsApp Number"></a>
             </nav>
