Fixes from Audit Tool for W02 Assignment - Directory Page

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,11 +7,16 @@
     <title>Villa Elisa Chamber of Commerce - Directory of Local Businesses</title>
     <meta name="description" content="A Directory of Local Businesses from the Villa Elisa Chamber of Commerce">
     <meta name="author" content="Matt Handy">
-    <meta name="og:title" content="Villa Elisa Chamber of Commerce - Directory of Local Businesses">
-    <meta name="og:description" content="A Directory of Local Businesses from the Villa Elisa Chamber of Commerce">
-    <meta name="og:image" content="">
-    <meta name="og:url" content="">
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <meta property="og:title" content="Villa Elisa Chamber of Commerce - Directory of Local Businesses">
+    <meta property="og:description" content="A Directory of Local Businesses from the Villa Elisa Chamber of Commerce">
+    <meta property="og:image" content="https://mhandy-pathway.github.io/wdd231/chamber/images/villa-elisa.webp">
+    <meta property="og:url" content="https://mhandy-pathway.github.io/wdd231/chamber/directory.html">
+    <link rel="icon" href="images/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
