URL error for W02 Assignment

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Villa Elisa Chamber of Commerce - Directory of Local Businesses">
     <meta property="og:description"
         content="A directory listing of businesses in Villa Elisa, Paraguay. The Chamber of Commerce has worked tirelessly to compile this information to help our citizens find the services that they need.">
-    <meta property="og:image" content="images/villa-elisa.webp">
+    <meta property="og:image" content="https://mhandy-pathway.github.io/wdd231/chamber/images/villa-elisa.webp">
     <meta property="og:url" content="https://mhandy-pathway.github.io/wdd231/chamber/directory.html">
     <link rel="icon" href="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
