--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button id="ham-btn" class="hamburger" aria-label="Menu"></button>
         <nav id="nav">
             <a href="index.html" class="current">Home</a>
-            <a href="#">Chamber Project</a>
+            <a href="chamber/">Chamber Project</a>
             <a href="#">Final Project</a>
         </nav>
     </header>
