Fixes for W03 Assignment

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="styles/directory-larger.css">
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
-    <script type="module" src="scripts/directory.js" defer></script>
+    <script type="module" src="scripts/directory.js"></script>
 </head>
 
 <body>
