Added empty image to prevent HTML validation and audit tool issues

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -67,7 +67,7 @@
                 <section class="box">
                     <h2>Current Weather</h2>
                     <div id="current-weather">
-                        <img id="weather-icon" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADklEQVR4AWL6////fwAAAAD//w7I1cwAAAAGSURBVAMACgUD/9k79a8AAAAASUVORK5CYII=" alt="Weather Data is Loading">
+                        <img id="weather-icon" src="images/empty-weather-icon.png" alt="Weather Data is Loading">
                         <div>
                             <span id="current-temp"></span><br>
                             <span id="current-conditions"></span><br>
