Shortened og meta description to be less than 200 characters

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Matt Handy">
     <meta property="og:title" content="Villa Elisa Chamber of Commerce - Home">
     <meta property="og:description"
-        content="The Villa Elisa Chamber of Commerce services all companies and organizations found within the city of Villa Elisa. On this homepage businesses can find information on how to become a member and information about other featured businesses.">
+        content="The Villa Elisa Chamber of Commerce services all companies and organizations found within the city of Villa Elisa. Here businesses can find information on the benefits of becoming a member.">
     <meta property="og:image" content="https://mhandy-pathway.github.io/wdd231/chamber/images/villa-elisa.webp">
     <meta property="og:url" content="https://mhandy-pathway.github.io/wdd231/chamber/index.html">
     <link rel="icon" href="images/favicon.ico">
