--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <div id="courseContent">
             </div>
         </section>
+        <dialog id="course-details"></dialog>
     </main>
     <footer>
         <nav>
