Initial commit of W04 Assignment

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Villa Elisa Chamber of Commerce - Directory of Local Businesses</title>
-    <meta name="description" content="A Directory of Local Businesses from the Villa Elisa Chamber of Commerce">
+    <title>Villa Elisa Chamber of Commerce - Home</title>
+    <meta name="description" content="Become a member of the Villa Elisa Chamber of Commerce.">
     <meta name="author" content="Matt Handy">
-    <meta property="og:title" content="Villa Elisa Chamber of Commerce - Directory of Local Businesses">
+    <meta property="og:title" content="Villa Elisa Chamber of Commerce - Join">
     <meta property="og:description"
-        content="A directory listing of businesses in Villa Elisa, Paraguay. The Chamber of Commerce has worked tirelessly to compile this information to help our citizens find the services that they need.">
+        content="The Villa Elisa Chamber of Commerce services all companies and organizations found within the city of Villa Elisa. Here businesses can find information on the benefits of becoming a member.">
     <meta property="og:image" content="https://mhandy-pathway.github.io/wdd231/chamber/images/villa-elisa.webp">
-    <meta property="og:url" content="https://mhandy-pathway.github.io/wdd231/chamber/directory.html">
+    <meta property="og:url" content="https://mhandy-pathway.github.io/wdd231/chamber/index.html">
     <link rel="icon" href="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,12 +20,12 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base-small.css">
-    <link rel="stylesheet" href="styles/directory-small.css">
+    <link rel="stylesheet" href="styles/thankyou-small.css">
     <link rel="stylesheet" href="styles/base-larger.css">
-    <link rel="stylesheet" href="styles/directory-larger.css">
+    <link rel="stylesheet" href="styles/thankyou-larger.css">
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
-    <script type="module" src="scripts/directory.js"></script>
+    <script type="module" src="scripts/thankyou.js"></script>
 </head>
 
 <body>
@@ -35,21 +35,17 @@
         <button id="ham-btn" class="hamburger" aria-label="Menu"></button>
         <nav id="nav">
             <a href="./">Home</a>
-            <a href="directory.html" class="current">Directory</a>
+            <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
             <a href="#">Discover</a>
         </nav>
     </header>
     <main>
         <section class="body">
-            <h1>Business Directory</h1>
-            <section class="directory-btns">
-                <img src="images/grid.svg" id="gridButton" alt="View Members in Grid">
-                <img src="images/list.svg" id="listButton" alt="View Members in List">
-            </section>
-            <section id="directory">
-
-            </section>
+            <h1>Thank You for Becoming a Member</h1>
+            <p>Welcome to the ever-growing list of smart businesses that have decided to join the list of members of the Villa Elisa Chamber of Commerce. We will review your submission and be in contact with you within the next 24 hours to confirm the details for your business listing.</p>
+            <p>Please double-check your submission details below to ensure they look correct.</p>
+            <div id="submission-details"></div>
         </section>
     </main>
     <footer>
