--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,7 +36,7 @@
         <nav id="nav">
             <a href="./" class="current">Home</a>
             <a href="directory.html">Directory</a>
-            <a href="#">Join</a>
+            <a href="join.html">Join</a>
             <a href="#">Discover</a>
         </nav>
     </header>
