Finishing touches to W04 Assignment

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Villa Elisa Chamber of Commerce - Home</title>
+    <title>Villa Elisa Chamber of Commerce - Join</title>
     <meta name="description" content="Become a member of the Villa Elisa Chamber of Commerce.">
     <meta name="author" content="Matt Handy">
     <meta property="og:title" content="Villa Elisa Chamber of Commerce - Join">
     <meta property="og:description"
-        content="The Villa Elisa Chamber of Commerce services all companies and organizations found within the city of Villa Elisa. Here businesses can find information on the benefits of becoming a member.">
+        content="Become a member of the Villa Elisa Chamber of Commerce. The benefits of chamber membership will help your business to grow.">
     <meta property="og:image" content="https://mhandy-pathway.github.io/wdd231/chamber/images/villa-elisa.webp">
     <meta property="og:url" content="https://mhandy-pathway.github.io/wdd231/chamber/index.html">
     <link rel="icon" href="images/favicon.ico">
@@ -57,22 +57,22 @@
                 <label class="radio-option"><input type="radio" name="membershipLevel" value="Gold" required> Gold Membership</label>
                 <label>Organization Description <textarea name="organizationDescription" title="A Description of your Organization"></textarea></label>
                 <input type="hidden" name="formSubmittedOn" id="submitted-on">
-                <button type="submit" class="main">Become a Member Today!</button>
+                <button type="submit">Become a Member Today!</button>
             </form>
             <div>
-                <section class="membership-level">
+                <section class="membership-level np">
                     <h2>Non-Profit Membership Level</h2>
                     <button id="np-button" class="main">Learn More</button>
                 </section>
-                <section class="membership-level">
+                <section class="membership-level bronze">
                     <h2>Bronze Membership Level</h2>
                     <button id="bronze-button" class="main">Learn More</button>
                 </section>
-                <section class="membership-level">
+                <section class="membership-level silver">
                     <h2>Silver Membership Level</h2>
                     <button id="silver-button" class="main">Learn More</button>
                 </section>
-                <section class="membership-level">
+                <section class="membership-level gold">
                     <h2>Gold Membership Level</h2>
                     <button id="gold-button" class="main">Learn More</button>
                 </section>
