--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Villa Elisa Chamber of Commerce - Home</title>
-    <meta name="description" content="Become a member of the Villa Elisa Chamber of Commerce.">
+    <title>Villa Elisa Chamber of Commerce - Thank You</title>
+    <meta name="description" content="Thank you for becoming a member of the Villa Elisa Chamber of Commerce.">
     <meta name="author" content="Matt Handy">
-    <meta property="og:title" content="Villa Elisa Chamber of Commerce - Join">
+    <meta property="og:title" content="Villa Elisa Chamber of Commerce - Thank You">
     <meta property="og:description"
-        content="The Villa Elisa Chamber of Commerce services all companies and organizations found within the city of Villa Elisa. Here businesses can find information on the benefits of becoming a member.">
+        content="Thank you for becoming a member of the Villa Elisa Chamber of Commerce. You will get an email from us soon.">
     <meta property="og:image" content="https://mhandy-pathway.github.io/wdd231/chamber/images/villa-elisa.webp">
     <meta property="og:url" content="https://mhandy-pathway.github.io/wdd231/chamber/index.html">
     <link rel="icon" href="images/favicon.ico">
