--- a/chamber/join.html
+++ b/chamber/join.html
@@ -37,7 +37,7 @@
             <a href="./">Home</a>
             <a href="directory.html">Directory</a>
             <a href="join.html" class="current">Join</a>
-            <a href="#">Discover</a>
+            <a href="discover.html">Discover</a>
         </nav>
     </header>
     <main>
