Initial commit for Final Project

--- a/final/plan.html
+++ b/final/plan.html
@@ -14,8 +14,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="styles/base-small.css">
-    <link rel="stylesheet" href="styles/base-larger.css">
+    <link rel="stylesheet" href="styles/plan-small.css">
+    <link rel="stylesheet" href="styles/plan-larger.css">
 </head>
 <body>
     <header>
