--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <nav id="nav">
             <a href="index.html" class="current">Home</a>
             <a href="chamber/">Chamber Project</a>
-            <a href="#">Final Project</a>
+            <a href="final/">Final Project</a>
         </nav>
     </header>
     <main>
