Fixed an error on the audit

--- a/final/index.html
+++ b/final/index.html
@@ -41,7 +41,7 @@
     <main>
         <div class="hero">
             <img src="images/hero.webp" alt="Send Packages to your Missionary!" loading="lazy">
-            <div class="call-to-action">
+            <div>
                 <p></p>
                 <a href="packages.html">Send a Package</a>
             </div>
